--- a/bart-app/src/App.css
+++ b/bart-app/src/App.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     height: 100vh;
     width: 100vw;
     background-color: #282c34;
