--- a/bart-app/src/App.css
+++ b/bart-app/src/App.css
@@ -8,6 +8,7 @@
     width: 100vw;
     background-color: #282c34;
     color: white;
+    border: 1px solid red;
 }
 .MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline, #demo-simple-select-helper-label, #demo-simple-select-helper, .MuiSvgIcon-root{
     color: white !important;
@@ -25,19 +26,31 @@
     height: 100% !important;
     width: 100vw;
     background-color: #282c34;
-    color: white;
+    color: black;
     border: 1px solid red;
+    background-color: aliceblue;
+    margin-top: 10em;
 }
 .train, .train-header {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
+    /* grid-gap: 10px; */
     width: 100%;
-    border: 1px solid red;
+   border: .5px solid black;
+}
+
+.train-header {
+    font-weight: bold;
+    font-size: 1.5em;
+    text-align: center;
+    
+    background-color: aquamarine;
 }
 .train div, .train-header div{
-    border: 1px solid red;
-    padding: 10px;
-    margin: 10px;
+    border-left: .25px solid black;
+    padding: 10px 0;
+    margin: 10px 0;
+    height: 3em;
+    
     text-align: center;
 }
