added login functionality

--- a/bart-app/src/App.css
+++ b/bart-app/src/App.css
@@ -2,7 +2,8 @@
     display: flex;          /* Enable flexbox */
     flex-direction: column; /* Stack children vertically */
     height: 100vh;          /* Make root take up the full viewport height */
-    overflow: hidden;       /* In case the content in main-container is too much, it won't overflow */
+    overflow: hidden;
+    background: linear-gradient(45deg, #102eff, #d2379b);       /* In case the content in main-container is too much, it won't overflow */
 }
 
 
