--- a/bart-app/src/Pages/Dashboard.css
+++ b/bart-app/src/Pages/Dashboard.css
@@ -6,7 +6,7 @@
     /* justify-content: center; */
     height: 100%;
     width: 100vw;
-    background-color: #282c34;
+    /* background-color: #282c34; */
     color: white;
     border: 1px solid red;
     padding-top: 60px;
