--- a/bart-app/src/Pages/Layout.css
+++ b/bart-app/src/Pages/Layout.css
@@ -1,5 +1,5 @@
 .nav-bar {
-    background-color: #264ECA;
+    /* background-color: #264ECA; */
     overflow: hidden;
     position: fixed;
     top: 0;
@@ -35,13 +35,13 @@
     padding: 14px 16px;
     border-radius: 10px;
     /* border: 1px solid black; */
-    background-color: #264ECA;
+    /* background-color: #264ECA; */
     transition: background-color 0.5s ease;
 }
 .logo {
     position: absolute;
     left: 0;
-    
+
 }
 
 
