--- a/bart-app/src/Pages/Layout.css
+++ b/bart-app/src/Pages/Layout.css
@@ -29,7 +29,7 @@
 .nav-bar a {
     text-decoration: none;
     color: aliceblue;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: bold;
     text-align: center;
     padding: 14px 16px;
@@ -42,6 +42,17 @@
     position: absolute;
     left: 0;
 
+}
+
+.logo img{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    margin-left: 1em;
+    margin-right: 1em;
+    /* border: 1px solid black; */
+    transition: background-color 0.5s ease;
+    background-color: aliceblue;
 }
 
 
