--- a/bart-app/src/Pages/Dashboard.css
+++ b/bart-app/src/Pages/Dashboard.css
@@ -21,17 +21,25 @@
 .trains-container
 {
     display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  padding: 20px;
-  background-color: #f4f4f4;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    background-color: #f4f4f4;
+    height: 20em;
+    width: 80%;
+    margin-top: 3em;
+    overflow-y: auto;
 }
 .train, .train-header {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    /* grid-gap: 10px; */
-    width: 100%;
-   border: .5px solid black;
+    
+    display: flex;
+  align-items: center;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #1a3b5d;
+ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+   
 }
 
 .train-header {
@@ -43,10 +51,8 @@
     
 }
 .train div, .train-header div{
-    border-left: .25px solid black;
-    padding: 10px 0;
-    margin: 10px 0;
-    height: 3em;
-    
-    text-align: center;
+    flex: 1;
+  margin: 0 10px;
+  text-align: center;
+
 }
