added new sigup page

--- a/bart-app/src/Pages/Dashboard.css
+++ b/bart-app/src/Pages/Dashboard.css
@@ -8,7 +8,7 @@
     color: white;
 }
 .MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline, #demo-simple-select-helper-label, #demo-simple-select-helper, .MuiSvgIcon-root{
-    color: white !important;
+    color: white;
     border-color: white;
 
     
