--- a/bart-app/src/Pages/Dashboard.css
+++ b/bart-app/src/Pages/Dashboard.css
@@ -45,10 +45,21 @@
     text-align: center;
     margin: auto;
     padding: auto;
+    
 
     
     
 }
+.dropdown>div{
+    width: 20em;
+}
+.stations-container>button{
+    margin-top: 2em;
+    width: 15em;
+    height: 3em;
+}
+
+
 .schedule-container{
     grid: 2;
     display: grid;
