--- a/bart-app/src/Pages/Favorites.css
+++ b/bart-app/src/Pages/Favorites.css
@@ -1,39 +1,8 @@
-.favorites {
+.favorites{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: calc(100% - 60px);
-    color: aliceblue;
-    font-weight: bolder;
-    margin-top: 5em;
-    overflow: auto!important;
-   
-}
-
-.favorites-station-name {
-    font-size: 2em;
-    /* margin-bottom: 1em; */
+    height: 100vh;
     color: white;
-}
-
-.favorites-trains-container {
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 150em;
-    width: 80%;
-    background-color: #282c34;
-    overflow-y: auto;
-    padding-top: 5em;
-    border-radius: 20px;
-    overflow-x: hidden;
-    padding-top: 2em; */
-    padding: 20px;
-    height: 100%;
-    width: 100%;
-    background-color: white;
-
-
 }
