--- a/bart-app/src/Pages/Favorites.css
+++ b/bart-app/src/Pages/Favorites.css
@@ -13,7 +13,8 @@
     grid-template-columns: 1fr 1fr;
     text-align: center;
     width:100%;
-    height: 80%;
+    height: auto;
+    min-height: 80%;
     overflow-y: auto;
 }
 .favorites-station {
