--- a/bart-app/src/Pages/Favorites.css
+++ b/bart-app/src/Pages/Favorites.css
@@ -1,4 +1,5 @@
 .favorites{
+    margin-top: 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,29 +17,46 @@
     height: auto;
     min-height: 80% ;
     overflow-y: auto;
+    
 }
 .favorites-station {
-   height: 10em;
-   padding: 30px;
+   height: 15em;
+   padding-top: 5px;
    background-color: #f4f4f4;
    color: black;
    margin: 2em;
    border-radius: 10px;
+   /* overflow-y: auto;
+} */
 }
 .favorites-trains-container {
-    height: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    height: 70%;
     overflow-y: auto;
 }
 
 .favorites-trains-container .train {
     display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 20px;
+    
+    flex-direction: row;
+   
     background-color: #f4f4f4;
-    /* height: 15em; */
-    width: 100%;
-    overflow-y: auto;
-    border-radius: 0 0 5px 5px;
-    color: red;
+    height: 1em;
+    width: 80%;
+    
+
+    text-align: center;
+    align-items: center;
+    border-radius: 7px;
+    color: white;
+    margin: auto;
+    margin-top: 1em;
+    font-weight: bold;
+}
+
+.favorites-station-name {
+    font-size: 1em;
+    font-weight: bold;
+   
 }
