--- a/bart-app/src/Pages/Layout.css
+++ b/bart-app/src/Pages/Layout.css
@@ -52,7 +52,9 @@
     margin-right: 1em;
     /* border: 1px solid black; */
     transition: background-color 0.5s ease;
-    background-color: aliceblue;
+    background-color: transparent  ;
+    filter: brightness(0) invert(1);
+    
 }
 
 
